# template-notebooks

./: .gitignore  README.md  basic_git.md  basic_git_commands.md  basic_poetry.md  basic_poetry_commands.md  basic_pyenv.md  project_design_requirements.md  readme_requirements.md
cv/classification/multi/decor/v0.1/: README.md  pyproject.toml
cv/classification/multi/decor/v0.1/notebooks/: augoff.ipynb  confidence.ipynb  pipeline_batch.ipynb  register.md  train.ipynb  video_cutting.ipynb
cv/classification/multi/decor/v0.2/: README.md  pyproject.toml
cv/classification/multi/decor/v0.2/notebooks/: augoff.ipynb  augoff_ft.ipynb  eda.ipynb  fine_tune.ipynb  register.md  train.ipynb  video_cutting.ipynb
