[tool.poetry]
name = "s_iner_cv_clf_multi_decor_v0.2"
version = "0.1.0"
description = ""
authors = ["mindset"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "1.13.0", extras = ["cuda117"]}
timm = "^0.6.13"
opencv-python = "^4.6.0"
Pillow = "^9.3.0"
lxml = "^4.9.1"
albumentations = "1.3.0"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.2"
pycocotools = "^2.0.6"
tqdm = "^4.64.1"
ipywidgets = "^8.0.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"